@@ -118,7 +118,7 @@ class unit_movement_type
 public:
         //this move distance means a hex is unreachable
 	//if there is an UNREACHABLE macro declared in the data tree
-	//it should match this value.    
+	//it should match this value.
 	static const int UNREACHABLE = 99;
 
 	//this class assumes that the passed in reference will remain valid
@@ -237,6 +237,10 @@ public:
 	const std::vector<t_string>& abilities() const { return abilities_; }
 	const std::vector<std::string>& ability_tooltips() const { return ability_tooltips_; }
 
+	// some extra abilities may be gained through AMLA advancements
+	const std::vector<t_string>& adv_abilities() const { return adv_abilities_; }
+	const std::vector<std::string>& adv_ability_tooltips() const { return adv_ability_tooltips_; }
+
 	bool can_advance() const { return !advances_to_.empty(); }
 
         bool not_living() const;
@@ -296,8 +300,8 @@ private:
 
 	fixed_t alpha_;
 
-	std::vector<t_string> abilities_;
-	std::vector<std::string> ability_tooltips_;
+	std::vector<t_string> abilities_, adv_abilities_;
+	std::vector<std::string> ability_tooltips_, adv_ability_tooltips_;
 
 	bool zoc_, hide_help_;
 
