@@ -5,6 +5,8 @@ Version 1.5.5+svn:
    * The new experimental gold carryover system is now supported in Son of the
      Black Eye as well: the choice appears in the difficulty level menu when
      starting the campaign.
+ * Help menu
+   * ability upgrades for max-level advancements are now listed (bug #10337)
  * Editor2
    * Changed the base-terrain key modifier to shift from alt.
      This fixes an issue with some window managers grabbing the event.
